@@ -168,6 +168,18 @@
 			<code>getFieldValueWithoutException(Class&lt;? extends Object&gt;, String)</code>, and 
 			<code>getFieldValueWithoutException(Object, String, Class&lt;? extends Object&gt;)</code>.
 		</p>
+		<h4 id="Changesinorg.eclipse.sirius.common.ui">Changes in 
+			<code>org.eclipse.sirius.common.ui</code>
+		</h4>
+		<ul>
+			<li><span class="label label-info">Modified</span> In 
+				<code>org.eclipse.sirius.common.ui.tools.api.dialog.quickoutline.QuickOutlineDescriptor</code>, the methods 
+				<code>getFirstPage()</code> and 
+				<code>getNextPage(QuickOutlinePageDescriptor)</code> which used to return a 
+				<code>org.eclipse.sirius.ext.base.Option&lt;T&gt;</code> now return standard 
+				<code>java.util.Optional&lt;T&gt;</code> instead.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius">Changes in 
 			<code>org.eclipse.sirius</code>
 		</h4>
